Slight fix on text, added picture for Benedikt, added picture for Hulda, linked to picture of Stefan, fixed alignment.

--- a/src/scss/sections/_team.scss
+++ b/src/scss/sections/_team.scss
@@ -3,12 +3,15 @@
     margin-bottom: 3rem;
     text-align: center;
     img {
-        width: 14rem;
-        height: 14rem;
+        width: 11rem;
+        height: 11rem;
         border: 0.5rem solid fade-out($black, 0.9);
     }
     h4 {
         margin-top: 1.5rem;
         margin-bottom: 0;
     }
+}
+.row.centered {
+    justify-content: center;
 }
